--- a/iTunesSearch/iTunesSearch/Base.lproj/Main.storyboard
+++ b/iTunesSearch/iTunesSearch/Base.lproj/Main.storyboard
@@ -51,12 +51,17 @@
                                         <rect key="frame" x="0.0" y="104" width="374" height="44"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Results:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLa-Q4-Bne">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="337" height="44"/>
                                                 <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="FDd-vN-TVu">
+                                                <rect key="frame" x="337" y="0.0" width="37" height="44"/>
+                                                <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </activityIndicatorView>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="UgY-ec-nJk"/>
@@ -65,14 +70,14 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VdZ-4l-8pP">
                                         <rect key="frame" x="0.0" y="156" width="374" height="662"/>
                                         <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="crE-bW-kUa">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="crE-bW-kUa">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="662"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <color key="separatorColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ResultCell" rowHeight="132" id="uZo-py-HST" customClass="ResultCell" customModule="iTunesSearch" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="28" width="374" height="132"/>
+                                                        <rect key="frame" x="0.0" y="55.5" width="374" height="132"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uZo-py-HST" id="1CD-FE-qTZ">
                                                             <rect key="frame" x="0.0" y="0.0" width="374" height="132"/>
@@ -135,6 +140,10 @@
                                                         </connections>
                                                     </tableViewCell>
                                                 </prototypes>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="cnQ-eo-u7P"/>
+                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="GQa-Zy-NX8"/>
+                                                </connections>
                                             </tableView>
                                         </subviews>
                                     </stackView>
@@ -154,6 +163,7 @@
                         <outlet property="criteriaField" destination="C3X-Dp-43l" id="mKl-sv-Yq4"/>
                         <outlet property="resultsInstructionLabel" destination="aLa-Q4-Bne" id="AIs-hB-M10"/>
                         <outlet property="resultsTableView" destination="crE-bW-kUa" id="11y-WQ-4kM"/>
+                        <outlet property="searchActivity" destination="FDd-vN-TVu" id="fPf-bT-pOL"/>
                         <outlet property="searchInstructionsLabel" destination="pZE-Q9-73h" id="edr-OJ-GBJ"/>
                     </connections>
                 </viewController>
