--- a/iTunesSearch/iTunesSearch/Base.lproj/Main.storyboard
+++ b/iTunesSearch/iTunesSearch/Base.lproj/Main.storyboard
@@ -40,7 +40,10 @@
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C3X-Dp-43l">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="bMB-4c-9fr"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                         <constraints>
