--- a/iTunesSearch/iTunesSearch/Base.lproj/Main.storyboard
+++ b/iTunesSearch/iTunesSearch/Base.lproj/Main.storyboard
@@ -89,35 +89,30 @@
                                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CNW-NW-Tvr">
                                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="132"/>
                                                                     <subviews>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MTk-1J-5tS">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="44" height="132"/>
-                                                                            <constraints>
-                                                                                <constraint firstAttribute="width" constant="44" id="HhF-CJ-hMP"/>
-                                                                            </constraints>
-                                                                        </imageView>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UY7-pK-Y0r">
-                                                                            <rect key="frame" x="44" y="0.0" width="132" height="132"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="132"/>
                                                                             <constraints>
-                                                                                <constraint firstAttribute="width" constant="132" id="ox3-6d-8UC"/>
+                                                                                <constraint firstAttribute="height" constant="100" id="9ev-e3-tdM"/>
+                                                                                <constraint firstAttribute="width" constant="100" id="ox3-6d-8UC"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="prC-Yc-YNl">
-                                                                            <rect key="frame" x="176" y="0.0" width="198" height="132"/>
+                                                                            <rect key="frame" x="100" y="0.0" width="274" height="132"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a6b-md-8NV">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="198" height="44"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="274" height="44"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sfy-EL-1ys">
-                                                                                    <rect key="frame" x="0.0" y="44" width="198" height="44"/>
+                                                                                    <rect key="frame" x="0.0" y="44" width="274" height="44"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="URL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SAa-Bl-vfu">
-                                                                                    <rect key="frame" x="0.0" y="88" width="198" height="44"/>
+                                                                                    <rect key="frame" x="0.0" y="88" width="274" height="44"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
@@ -137,7 +132,6 @@
                                                         <connections>
                                                             <outlet property="artworkImage" destination="UY7-pK-Y0r" id="CrG-3V-75y"/>
                                                             <outlet property="genreField" destination="Sfy-EL-1ys" id="e6t-Sd-rvk"/>
-                                                            <outlet property="isFavoriteImage" destination="MTk-1J-5tS" id="whJ-CR-H4T"/>
                                                             <outlet property="nameField" destination="a6b-md-8NV" id="cv5-Y4-Psp"/>
                                                             <outlet property="urlField" destination="SAa-Bl-vfu" id="bgI-8E-F9c"/>
                                                         </connections>
